0.09

0.08 2022-12-09T20:11:29+01:00
 [Common]
 - Rename example files to better names.
 - Rewrite doc to use =head2 sections.
 - Update copyright years.

 [Log::FreeSWITCH::Line::Data]
 - Add test with bad date.

0.07 2021-02-21T15:39:45+01:00
 [Common]
 - Fix bugtracker.
 - Fix use lib '.' in Makefile.PL.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SYNOPSIS section in doc.
 - Update Module::Install to 1.19 version.
 - Update author github username.
 - Update author name.
 - Update copyright years.

0.06 2015-10-22T11:27:41+02:00
 [Common]
 - Move author tests to xt/ directory.

 [Log::FreeSWITCH::Line]
 - Add SEE ALSO section to doc.

 [Log::FreeSWITCH::Line::Data]
 - Improve and fix SEE ALSO section in doc.

0.05 2015-05-19T17:02:04+02:00
 [Common]
 - Update Module::Install to 1.16 version.

 [Log::FreeSWITCH::Line]
 - Add tests.
 - Improve parse() subroutine to parse time without miliseconds.
 - Remove warning in serialize() with data object without message.

0.04 2015-01-09T07:42:44+01:00
 [Log::FreeSWITCH::Line::Data]
 - Fix test dependency for DateTime module.

0.03 2015-01-08T19:59:22+01:00
 [Common]
 - Fix dependencies, which breaks tests (bad Error::Pure::Always).

0.02 2015-01-08T01:30:56+01:00
 [Log::FreeSWITCH::Line::Data]
 - Add missing VERSION.
 - Add tests.
 - Fix time without miliseconds.

0.01 2015-01-04T11:16:34+01:00
 - First version.